--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Annie-Huang/hq-admin#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
